--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 40%;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -22,11 +24,18 @@
   color: #09d3ac;
 }
 
-/* .App-circle {
-  height: 40vmin;
-} */
-
 .App-circle {
   height: 120px;
   width: 120px;
+}
+
+/**********************************************/
+
+.Footer-home-icon {
+  position: relative;
+  top: 40px;
+  right: 3px;
+  left: 5px;
+  height: 50px;
+  width: 50px;
 }
